--- a/assets/css/pub/theme-mobile.css
+++ b/assets/css/pub/theme-mobile.css
@@ -6,6 +6,13 @@ html {
 
 body {
 	margin: 0;
+
+	display: flex;
+}
+
+
+.page-container {
+	
 	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
@@ -142,6 +149,9 @@ body {
 	font-size: 1.6rem;
 }
 
+.main {
+	margin-bottom: auto;
+}
 
 .content {
 	/*box-sizing: border-box;*/
@@ -185,4 +195,64 @@ body {
 
 .goup-arrow {
 	/*fill: red;*/
+}
+
+
+.emtheme-cookie-container {
+	position: fixed;
+	bottom: 60px;
+	width: 100%;
+
+	/* centering content */
+	display: flex;
+	justify-content: center;
+	align-content: center;
+
+	font-size: 1.6rem;
+}
+
+/* cookie container */
+.emtheme-cookie {
+	display: inline-flex;
+	flex-direction: column;
+	min-width: 30%;
+	max-width: 60%;
+	padding: 2rem;
+
+	justify-content: space-between;
+	border-radius: 10px;
+	opacity: 0;
+}
+
+.emtheme-cookie-text {
+	align-self: center;
+	padding-right: 2rem;
+	user-select: none;
+}
+
+.emtheme-cookie-text > p {
+	margin-bottom: 0;
+}
+
+.emtheme-cookie-button {
+	padding: 0.5rem 2rem;
+	margin-top: 2rem;
+
+	align-self: center;
+	
+	border: none;
+	border-radius: 10px;
+	font-size: 2rem;
+
+	cursor: pointer;
+	user-select: none;
+}
+
+.emtheme-cookie-button:focus {
+	outline:none;
+}
+
+.emtheme-cookie-fade {
+	opacity: 0 !important;
+	transition: opacity 1s;
 }
