--- a/assets/css/pub/theme.css
+++ b/assets/css/pub/theme.css
@@ -4,6 +4,17 @@
 	A lot of css is set through inline-css by php reading from customizer settings (inc/em_css.php)
 	All colors, fonts, images and most dimensions.
 
+	LAYOUT
+	|html
+	|	body (flex column)
+	|   | 	page-container (flex column)
+	|   |   |	content-container (flex?)
+	|   |   |   | 			main main-sidebar (grid)
+	|   |   |   | 			content-column widget(s) (grid items)
+	|   |   | 	footer (flex)
+	|   | 	go up button (fixed)
+	|   | 	privacy window (fixed)
+
 	0.1 html
 	0.2 body
 
@@ -19,6 +30,7 @@
 	4.0 misc
 		4.1 go up button
 		4.2 privacy window
+	5.0 IE exclusive
 
 
 */
@@ -31,6 +43,8 @@
 */
 html {
 	font-size: 62.5%;
+	margin: 0 !important;
+	min-height: 100%;
 }
 
 /* 0.2 body */
@@ -43,6 +57,8 @@ body {
 	flex-direction: column;
 	align-items: center;
 
+	/*flex: 1;*/
+	/*min-height: 100vh;*/
 
 	min-height: 100vh;
 	/*justify-content: center;*/
@@ -50,7 +66,18 @@ body {
 
 /* container for everything on page 
    used with additional css to set the page's position */
+
 .page-container {
+	align-self: stretch;
+	flex: 1;
+
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+
+}
+
+.content-container {
 	align-self: stretch;
 
 	/* 	width of page
@@ -598,13 +625,20 @@ body {
 
 	body {
 		display: block;
+		min-height: 100%;
 		position: relative;
+	}
+
+	.page-container {
+		min-height: 100vh;
 	}
 
 	.main-sidebar {
 		display: -ms-grid;
 		-ms-grid-columns: auto 1fr auto;
 		-ms-grid-rows: auto 1fr auto;
+
+		margin-bottom: 30rem;
 	}
 
 	.default-template-top-widget {
