--- a/assets/css/pub/theme.css
+++ b/assets/css/pub/theme.css
@@ -43,8 +43,10 @@
 */
 html {
 	font-size: 62.5%;
-	margin: 0 !important;
-	min-height: 100%;
+
+	/**/
+	/*margin: 0 !important;*/
+	/*min-height: 100%;*/
 }
 
 /* 0.2 body */
@@ -53,45 +55,46 @@ body {
 	/* overwrite wordpress body margin css */
 	margin: 0;
 
-	display: flex;
+	/*display: flex;
 	flex-direction: column;
-	align-items: center;
+	align-items: center;*/
 
 	/*flex: 1;*/
-	/*min-height: 100vh;*/
 
-	min-height: 100vh;
+	/*min-height: 100vh;*/
 	/*justify-content: center;*/
 }
 
-/* container for everything on page 
-   used with additional css to set the page's position */
-
+/* 	container for page 
+	using flexbox to center or horizontal stretch page items 
+	using flex 1 on content element to push footer to bottom */
 .page-container {
-	align-self: stretch;
-	flex: 1;
 
+	/* pushing footer to bottom when page content has low height */
+	min-height: 100vh;
+
+	/* flexbox for centering/strecting */
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-
 }
 
+/* 	container for page content 
+	header, navbar, post content, widget content
+*/
 .content-container {
+
+	/* 100% width in flexbox */
 	align-self: stretch;
 
-	/* 	width of page
-		set to zero for force everything to center 
-		if children has align-self: stretch they 
-		will have 100% width of window */
+	/* pushing footer down to bottom */
 	flex: 1;
 
-	/* 	page content 
-		makes default setting to be center window */
+
+	/* header, navbar, post content, widget content */
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-
 }
 
 /* 1.0 header */
@@ -103,9 +106,10 @@ body {
 	and margin/paddings */
 .emtheme-header-container {
 
-	position: relative;
+	/*position: relative;*/
 
 	align-self: stretch;
+
 
 	/* centers the header content */
 	display: flex; 
@@ -113,7 +117,7 @@ body {
 	justify-content: center; 
 	
 
-	min-height: 8rem; /* TODO: test */
+	/*min-height: 8rem;  TODO: test */
 	padding: 1rem 0;
 }
 
@@ -128,7 +132,6 @@ body {
 .title-link {
 	text-decoration: none;
 
-	/* "floating" search form in header */
 	margin-right: auto;
 }
 
@@ -160,6 +163,7 @@ body {
 	/* body has flex and flex-direction: column, 
 	so stretch for full width */
 	align-self: stretch;
+	/*justify-self: stretch;*/
 
 	/* centers the content of navbar */
 	display: flex;
@@ -472,7 +476,8 @@ body {
 
 	/* sets element to full width b/c 
 	body's css settings */
-	align-self: stretch;
+	/*align-self: end;*/
+	/*justify-self: flex-end;*/
 
 	/* margin to post content */
 	margin-top: 4rem;
@@ -480,7 +485,7 @@ body {
 	/* centering container content */
 	display: flex;
 	flex-direction: column;
-	/*justify-content: center;*/
+	justify-content: center;
 	align-items: center;
 }
 
