--- a/assets/css/pub/theme.css
+++ b/assets/css/pub/theme.css
@@ -30,6 +30,8 @@
 	4.0 misc
 		4.1 go up button
 		4.2 privacy window
+		4.3 404 page
+		4.4 copy right 
 	5.0 IE exclusive
 
 
@@ -63,6 +65,11 @@ body {
 
 	/*min-height: 100vh;*/
 	/*justify-content: center;*/
+}
+
+/* stuff to be hidden by js on desktop */
+.desktop-hidden {
+	display: none;
 }
 
 /* 	container for page 
@@ -157,55 +164,101 @@ body {
 
 /* 1.2 navbar */
 
+/*
+	LAYOUT (class names)
+	navbar-background 			-> background-color
+	|	navbar-container		-> width
+	|	|	navbar-identity		-> logo/title (if toggled)
+	|	|	|	navbar-logo		-> logo image (if chosen)
+	|	|	|	navbar-title	-> site title (if chosen)
+	|	|	navbar-menu			-> container
+	|	|	|	menu-container	-> nav element
+	|	|	|	navbar-search	-> search form (section 1.3)
+
+	NAVBAR-BACKGROUND
+		has background color/linear-gradient 
+		and is set to "100% width" at defaulit
+
+		NAVBAR-CONTAINER
+			has width. set to 1240px as default 
+			and matches other elements that is centered on screen.
+
+			NAVBAR-IDENTITY
+				container for logo and title if set in wp customizer.
+				set css: margin-right: auto to push menu to the right.
+
+				NAVBAR-LOGO
+					container for logo image if chosen in wp customizer
+
+				NAVBAR-TITLE 
+					element for site title if set in wp customizer.
+					text set to _not_ wrap
+
+			NAVBAR-MENU
+				container for menu element (nav) and search form.
+				on mobile, the search form is a part of the togglable nav menu.
+
+				MENU-CONTAINER
+					the actual html nav element.
+					contains an ul element of nav items.
+
+					MENU-LIST
+						ul element.
+
+						MENU-ITEM
+							li element that contains the nav item.
+							and contain possible sub-menus.
+
+							MENU-LINK
+								the actual nav item as an anchor.
+								contains all visual css (color, font, padding, etc)
+				
+				NAVBAR-SEARCH
+					container for nav container for search form
+
+					EMTHEME-SEARCH-FORM
+						container for form element
+
+						EMTHEME-SEARCH-INPUT
+							input field for search form
+
+						EMTHEME-SEARCH-BUTTON
+							search button
+
+							MATERIAL-ICONS
+								looking glass icon in search button
+*/
+
+
 /* navbar full width container */
 .navbar-background {
 
 	/* body has flex and flex-direction: column, 
 	so stretch for full width */
 	align-self: stretch;
-	/*justify-self: stretch;*/
 
 	/* centers the content of navbar */
 	display: flex;
 	justify-content: center;
 }
 
-/* actual navbar container */
+/* navbar container with width set by back-end */
 .navbar-container {
 
-	/* centers content */
+	/* vertical centers content */
 	display: flex;
 	align-items: center;
 }
 
-/* container for logo */
+/* container for logo and title */
 .navbar-identity {
+	
+	/* vertical centers content */
 	display: flex;
 	align-items: center;
 }
 
-/* anchor container for title, tagline */
-.navbar-title {
-	white-space: nowrap;
-	margin-right: auto;
-}
-
-/* container for the menu */
-.navbar-menu {
-	flex: 1;
-	display: flex;
-}
-
-/* nav container for ul element of nav items */
-.menu-container {
-	/* sets navbar search box to "aligned right" */
-	margin-right: auto;
-}
-
-/* site logo on navbar 
-   logo is shown as background image with full width 
-   but height same as navbar with overflow cropped 
-   at top and bootom*/
+/* site logo on navbar */
 .navbar-logo {
 	/* background image url set from php */
 
@@ -219,6 +272,29 @@ body {
 	background-position: center;
 	background-repeat: no-repeat;
 }
+
+.navbar-title {
+
+	white-space: nowrap;
+
+	/* pushes search box (if toggled) to the right */
+	margin-right: auto;
+}
+
+/* container for the menu */
+.navbar-menu {
+	flex: 1;
+	display: flex;
+}
+
+/* 	nav container for ul element of nav items 
+	the nav element */
+.menu-container {
+
+	/* sets navbar search box to "aligned right" */
+	margin-right: auto;
+}
+
 
 /* moving submenu outside navbar */
 .sub-menu {
@@ -281,6 +357,7 @@ body {
 }
 
 
+/* background color for search form on navbar */
 .navbar-search .emtheme-search-button { 
 	background-color: inherit; 
 	border: none; 
@@ -291,26 +368,8 @@ body {
 
 /* 2.0 content */
 
-/* 2.1 widgets */
-.widget-title {
-	margin: 0;
-	font-size: 2rem;
-}
-
-/* 2.2 post content */
-
-/* wp fix? */
-.main p {
-	margin-top: 0;
-} 
-
-/* content area */
-.main {
-	margin-top: 2rem;
-	margin-bottom: auto;
-}
-
 /* adds widget areas to main */
+/* main tag */
 .main-sidebar {
 	display: grid;
 
@@ -321,15 +380,28 @@ body {
 	". top ."
 	"left content right"
 	". bottom .";
-
 }
 
-/* post content */
-.content-column {
-	grid-area: content;
+/* first paragraph does not have top margin */
+.main p:first-child {
+	margin-top: 0;
+} 
+
+/* content area */
+.main {
+	margin-top: 2rem;
+	margin-bottom: auto;
+}
+
+
+/* 2.1 widgets */
+.widget-title {
+	margin: 0;
+	font-size: 2rem;
 }
 
 /* settings of all default template widgets */
+/* aside tag */
 .default-template-widget {
 	padding: 1rem;
 }
@@ -375,7 +447,17 @@ body {
 	grid-area: bottom;
 }
 
-/* post content */
+
+/* 2.2 post content */
+
+/* post content area */
+/* section tag */
+.content-column {
+	grid-area: content;
+}
+
+/* post content container */
+/* article tag */
 .content {
 	box-sizing: border-box;
 	padding: 2rem;
@@ -387,6 +469,10 @@ body {
 	margin-top: 0;
 	font-size: 3.4rem;
 }
+
+
+
+
 
 /* inserted images */
 .alignright {
@@ -403,6 +489,9 @@ body {
 	margin: auto;
 }
 
+
+/* 	content-flex gets added through filter 
+	on [col left/center/right] matched in post content. */
 .content-flex {
 	display: flex;
 	margin: 2rem 0;
@@ -411,6 +500,7 @@ body {
 .content-flex-left {
 	order: 1;
 	margin-right: 2rem;
+	width: 25rem;
 }
 
 .content-flex-center {
@@ -421,6 +511,7 @@ body {
 .content-flex-right {
 	order: 3;
 	margin-left: 2rem;
+	width: 25rem;
 }
 
 
@@ -474,19 +565,20 @@ body {
 /* full width container for footer */
 .emtheme-footer-container {
 
-	/* sets element to full width b/c 
-	body's css settings */
-	/*align-self: end;*/
-	/*justify-self: flex-end;*/
-
 	/* margin to post content */
 	margin-top: 4rem;
 
 	/* centering container content */
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
 	align-items: center;
+}
+
+/* copy right element */
+.emtheme-cc {
+	font-family: Verdana;
+	font-size: 1rem;
+	margin: 0.5rem 0;
 }
 
 /* container for actual footer */
@@ -509,7 +601,6 @@ body {
 	padding: 2rem 0;
 }
 
-/* */
 
 /* 4.0 misc elements */
 
@@ -611,17 +702,10 @@ body {
 }
 
 
-/* stuff to be hidden by js on desktop */
-.desktop-hidden {
-	display: none;
-}
 
-.emtheme-cc {
-	font-family: Verdana;
-	font-size: 1rem;
-	margin: 0.5rem 0;
-}
 
+
+/* internet explorer only */
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
 	
 	html {
