--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name: (NY) EM Theme
 Version: 0.0.1.8
 Author: Arild, EM
-Description: Effectiv Marketing Theme for affiliates. 
+Description: Effectiv Marketing Theme for affiliates. Requires Worpress version 4.9 or later.
 Text Domain: Emtheme
 Domain Path: /languages
 GitHub Theme URI: zeah/EM-theme
