--- a/assets/css/admin/theme.css
+++ b/assets/css/admin/theme.css
@@ -39,7 +39,7 @@ a.toplevel_page_em-settings-page > div.wp-menu-image:before {
 
 	.emtheme-seo-container {
 		display: flex;
-		justify-content: space-around;
+		justify-content: space-between;
 		font-size: 16px;
 	}
 
