--- a/assets/css/pub/theme-mobile.css
+++ b/assets/css/pub/theme-mobile.css
@@ -62,6 +62,7 @@ body {
 .navbar-container {
 	display: flex;
 	position: relative;
+	/*max-width: 100vw;*/
 }
 
 /* logo, site title */
@@ -70,7 +71,7 @@ body {
 	align-items: center;
 	margin-right: auto;
 
-	/*width: 80%;*/
+	max-width: 80%;
 	padding-right: 2rem;
 
 }
@@ -127,6 +128,8 @@ body {
 	display: flex;
 	justify-content: flex-end;
 	margin: 20px 0;
+	box-sizing: border-box;
+	max-width: 100vw;
 }
 
 /* actual search form */
@@ -134,11 +137,14 @@ body {
 	flex: 1;
 
 	display: flex;
+
+	box-sizing: border-box;
 }
 
 /* search input */
 .emtheme-search-input {
-	margin: 0 1.5rem;
+	/*margin: 0 4.5rem;*/
+	margin-left: 2rem;
 	flex: 1;
 }
 
@@ -148,7 +154,7 @@ body {
 
 /* search button */
 .emtheme-search-button {
-	margin-right: 1.5rem;
+	margin-right: 1rem;
 
 	background-color: inherit;
 	border: none;
@@ -162,7 +168,9 @@ body {
 
 .menu-link {
 	padding: 1.5rem;
+	overflow: hidden;
 }
+
 .menu-has-child {
 	display: flex;
 	justify-content: space-between;
@@ -177,7 +185,9 @@ body {
 
 	/* show sub menu after arrow */
 	order: 3;
+	
 	width: 100vw;
+	box-sizing: border-box;
 }
 
 /* text set in wp navbar maker */
