--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*
-Theme Name: (NY) EM Theme
-Version: 0.0.1.8
+Theme Name: Emtheme
+Version: 0.0.1.9
 Author: Arild, EM
-Description: Effectiv Marketing Theme for affiliates. Requires Worpress version 4.9 or later.
+Description: Requires Worpress version 4.9 or later.
 Text Domain: Emtheme
 Domain Path: /languages
 GitHub Theme URI: zeah/EM-theme
