--- a/assets/css/admin/theme.css
+++ b/assets/css/admin/theme.css
@@ -24,6 +24,11 @@ a.toplevel_page_em-settings-page > div.wp-menu-image:before {
 }
 
 
+/* hit counter on page/post lists */
+.column-em_counter {
+	width: 150px;
+}
+
 /**/
 .postarea {
 	max-width: 1240px;
