--- a/assets/css/pub/theme.css
+++ b/assets/css/pub/theme.css
@@ -732,10 +732,13 @@ body {
 
 .column-404 {
 	flex: 1;
-
-	display: flex;
+	/*display: flex;*/
+	text-align: center;
 	justify-content: center;
+	margin-right: 2rem;
+	padding: 2rem;
 	/*align-content: center;*/
+	/*width: 50% !important;*/
 }
 
 
