--- a/assets/css/pub/theme.css
+++ b/assets/css/pub/theme.css
@@ -315,7 +315,7 @@ img {
 
 /* container for the menu */
 .navbar-menu {
-	/*flex: 1;*/
+	flex: 1;
 	display: flex;
 }
 
@@ -700,8 +700,8 @@ img {
 	align-self: stretch;
 	/* positioning content */
 	display: flex;
-	justify-content: space-between;
 
+	justify-content: center;
 	box-sizing: border-box;
 	padding: 0 2rem;
 }
@@ -711,8 +711,9 @@ img {
 .emtheme-footer-social,
 .emtheme-footer-contact,
 .emtheme-footer-aboutus {
-	flex-basis: 30%;
+	flex-basis: 20%;
 	padding: 2rem 0;
+	margin-right: 2rem;
 }
 
 
