--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name: Emtheme
 Version: 1.0.9
 Author: Arild, EM
-Description: Requires Worpress version 4.9 or later.
+Description: Requires Worpress version 4.9 or later and php 5.4 or later.
 Text Domain: Emtheme
 Domain Path: /languages
 GitHub Theme URI: zeah/EM-theme
