--- a/assets/css/admin/theme.css
+++ b/assets/css/admin/theme.css
@@ -29,9 +29,9 @@ a.toplevel_page_em-settings-page > div.wp-menu-image:before {
 }
 
 /**/
-.postarea {
-	max-width: 1240px;
-}
+/*.postarea {*/
+	/*max-width: 1240px;*/
+/*}*/
 
 #theme_sitemap_meta input {
 	position: relative;
