--- a/assets/css/pub/theme.css
+++ b/assets/css/pub/theme.css
@@ -420,31 +420,22 @@ img {
 .navbar-search {
 	position: relative;
 	align-self: center;
-	/*display: flex;*/
-	/*flex-direction: column;*/
-	/*align-items: center;*/
 	margin-left: 2rem;
 	cursor: pointer;
 }
 
 .navbar-search-popup {
 	display: none;
-	/*align-items: center;*/
-	/*justify-content: center;*/
 
 	position: absolute;
 	left: -385px;
-	/*top: -10px;*/
-	/*left: 60%;*/
-	/*right: 40%;*/
-	/*width: 400px;*/
-	/*height: 100px;*/
 	margin-top: 0.7rem;
-	/*padding: 2rem;*/
 
 	background-color: white;
 	border: solid 2px;
 	border-radius: 5px;
+
+	z-index: 100;
 
 }
 
