--- a/assets/css/pub/theme-mobile.css
+++ b/assets/css/pub/theme-mobile.css
@@ -119,7 +119,7 @@ img {
 	left: 0;
 	z-index: 99;
 
-	width: 100vw;
+	width: 100%;
 }
 
 /* onclick class */
@@ -217,12 +217,27 @@ img {
 	box-sizing: border-box;
 }
 
+.submenu-show {
+	display: block;
+}
+
 /* text set in wp navbar maker */
 .emtheme-navbar-description {
 	position: absolute;
 	right: 10px;
 	top: 10px;
 	font-size: 1.6rem;
+}
+
+.mobile-icon-container {
+	background-color: transparent;
+	border: none;
+	padding: 0;
+	margin-right: 1rem;
+	cursor: pointer;
+}
+.mobile-icon-container:focus {
+	outline:none;
 }
 
 /* sub-menu arrow container */
@@ -240,8 +255,9 @@ img {
 	top: 0.2rem;
 	height: 4rem;
 	width: 4rem	;
+	cursor: pointer;
 
-	margin-right: 1rem;
+	/*margin-right: 1rem;*/
 }
 }
 
